--- a/package_102/config/config.ini
+++ b/package_102/config/config.ini
@@ -1,9 +1,11 @@
 [log]
 name = Keyou
+all_level = DEBUG
 ls_level = WARNING
 fs_level = DEBUG
 
 [excel]
+file_name = cases.xlsx
 sheet_name = Sheet1
 columns_read = [1, 2, 3, 4]
 
