--- a/package_201/config/config.ini
+++ b/package_201/config/config.ini
@@ -9,4 +9,18 @@ file_name = api_test.xlsx
 sheet_name = Sheet1
 columns_read = [1, 3, 5, 6, 7, 8]
 
-[report]
+[database]
+host = test.lemonban.com
+user = test
+password = test
+database = future
+port = 3306
+charset = utf8
+
+[database2]
+host = localhost
+user = root
+password =
+database = my_db
+port = 3306
+charset = utf8
