--- a/package_301/config/config.ini
+++ b/package_301/config/config.ini
@@ -29,6 +29,7 @@ charset = utf8
 noRegPhone = 13912341112
 phone = 13912341111
 pwd = 123456
+memberId = 85010
 
 [env]
 api = http://test.lemonban.com/futureloan/mvc/api
