--- a/package_401/config/config.ini
+++ b/package_401/config/config.ini
@@ -10,10 +10,10 @@ sheet_name = Sheet1
 columns_read = [1, 3, 5, 6, 7, 8]
 
 [database]
-host = test.lemonban.com
-user = test
-password = test
-database = future
+host = 120.24.235.105
+user = python
+password = python666
+database =
 port = 3306
 charset = utf8
 
@@ -32,5 +32,5 @@ pwd = 123456
 memberId = 85010
 
 [env]
-api = http://test.lemonban.com/futureloan/mvc/api
+api = http://120.24.235.105:9010
 
