--- a/package_401/config/parms.yaml
+++ b/package_401/config/parms.yaml
@@ -1,40 +1,31 @@
 ---
 # 配置各接口的输入参数及其type
-- register:
-    mobilephone: str
+- sendMCode:
+      client_ip: str
+      tmpl_id: str
+      mobile: str
+
+- userRegister:
+      verify_code: str
+      user_id: str
+      channel_id: str
     pwd: str
-    regname: str
+      mobile: str
+      ip: str
 
-- login:
-    mobilephone: str
-    pwd: str
+- verifyUserAuth:
+      uid: long
+      true_name: str
+      cre_id: str
 
-- recharge:
-    mobilephone: str
-    amount: double
-
-- withdraw:
-    mobilephone: str
-    amount: double
-
-- list:
-
-- bidLoan:
-    memberId: int
-    password: str
-    loanId: double
-    amount: double
-
-- add:
-    memberId: int
-    title: str
-    amount: double
-    loanRate: double
-    loanTerm: int
-    loanDateType: int
-    repaymemtWay: int
-    biddingDays: int
-
-- audit:
-    loan_id: int
-    loan_status: int
+- bindBankCard:
+      uid: long
+      pay_pwd: str
+      mobile: str
+      cre_id: str
+      user_name: str
+      cardid: str
+      bank_type: int
+      bank_name: str
+      bank_area: str
+      bank_city: str
